// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config Resolve config - Custom Config should match default config when custom config is empty 1`] = `
Object {
  "corePlugins": Object {},
  "important": false,
  "plugins": Array [],
  "prefix": "",
  "purge": Array [],
  "separator": ":",
  "target": "relaxed",
  "theme": Object {
    "backgroundColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "current": "currentColor",
      "cyan": "#9cdbff",
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "backgroundOpacity": Object {
      "0": "0",
      "100": "1",
      "25": "0.25",
      "50": "0.5",
      "75": "0.75",
    },
    "backgroundPosition": Object {
      "bottom": "bottom",
      "center": "center",
      "left": "left",
      "left-bottom": "left bottom",
      "left-top": "left top",
      "right": "right",
      "right-bottom": "right bottom",
      "right-top": "right top",
      "top": "top",
    },
    "backgroundSize": Object {
      "auto": "auto",
      "contain": "contain",
      "cover": "cover",
    },
    "borderColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "current": "currentColor",
      "cyan": "#9cdbff",
      "default": "#e2e8f0",
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "borderOpacity": Object {
      "0": "0",
      "100": "1",
      "25": "0.25",
      "50": "0.5",
      "75": "0.75",
    },
    "borderRadius": Object {
      "default": "0.25rem",
      "full": "9999px",
      "lg": "0.5rem",
      "md": "0.375rem",
      "none": "0",
      "sm": "0.125rem",
    },
    "borderWidth": Object {
      "0": "0",
      "2": "2px",
      "4": "4px",
      "8": "8px",
      "default": "1px",
    },
    "boxShadow": Object {
      "2xl": "0 25px 50px -12px rgba(0, 0, 0, 0.25)",
      "default": "0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06)",
      "inner": "inset 0 2px 4px 0 rgba(0, 0, 0, 0.06)",
      "lg": "0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)",
      "md": "0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06)",
      "none": "none",
      "outline": "0 0 0 3px rgba(66, 153, 225, 0.5)",
      "sm": "0 1px 2px 0 rgba(0, 0, 0, 0.05)",
      "xl": "0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04)",
      "xs": "0 0 0 1px rgba(0, 0, 0, 0.05)",
    },
    "colors": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "current": "currentColor",
      "cyan": "#9cdbff",
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "container": Object {},
    "cursor": Object {
      "auto": "auto",
      "default": "default",
      "move": "move",
      "not-allowed": "not-allowed",
      "pointer": "pointer",
      "text": "text",
      "wait": "wait",
    },
    "divideColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "current": "currentColor",
      "cyan": "#9cdbff",
      "default": "#e2e8f0",
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "divideOpacity": Object {
      "0": "0",
      "100": "1",
      "25": "0.25",
      "50": "0.5",
      "75": "0.75",
    },
    "divideWidth": Object {
      "0": "0",
      "2": "2px",
      "4": "4px",
      "8": "8px",
      "default": "1px",
    },
    "fill": Object {
      "current": "currentColor",
    },
    "flex": Object {
      "1": "1 1 0%",
      "auto": "1 1 auto",
      "initial": "0 1 auto",
      "none": "none",
    },
    "flexGrow": Object {
      "0": "0",
      "default": "1",
    },
    "flexShrink": Object {
      "0": "0",
      "default": "1",
    },
    "fontFamily": Object {
      "body": Array [
        "Graphik",
        "sans-serif",
      ],
      "display": Array [
        "Gilroy",
        "sans-serif",
      ],
    },
    "fontSize": Object {
      "2xl": "1.5rem",
      "3xl": "1.875rem",
      "4xl": "2.25rem",
      "5xl": "3rem",
      "6xl": "4rem",
      "base": "1rem",
      "lg": "1.125rem",
      "sm": "0.875rem",
      "xl": "1.25rem",
      "xs": "0.75rem",
    },
    "fontWeight": Object {
      "black": "900",
      "bold": "700",
      "extrabold": "800",
      "hairline": "100",
      "light": "300",
      "medium": "500",
      "normal": "400",
      "semibold": "600",
      "thin": "200",
    },
    "gap": Object {
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "px": "1px",
    },
    "gridColumn": Object {
      "auto": "auto",
      "span-1": "span 1 / span 1",
      "span-10": "span 10 / span 10",
      "span-11": "span 11 / span 11",
      "span-12": "span 12 / span 12",
      "span-2": "span 2 / span 2",
      "span-3": "span 3 / span 3",
      "span-4": "span 4 / span 4",
      "span-5": "span 5 / span 5",
      "span-6": "span 6 / span 6",
      "span-7": "span 7 / span 7",
      "span-8": "span 8 / span 8",
      "span-9": "span 9 / span 9",
    },
    "gridColumnEnd": Object {
      "1": "1",
      "10": "10",
      "11": "11",
      "12": "12",
      "13": "13",
      "2": "2",
      "3": "3",
      "4": "4",
      "5": "5",
      "6": "6",
      "7": "7",
      "8": "8",
      "9": "9",
      "auto": "auto",
    },
    "gridColumnStart": Object {
      "1": "1",
      "10": "10",
      "11": "11",
      "12": "12",
      "13": "13",
      "2": "2",
      "3": "3",
      "4": "4",
      "5": "5",
      "6": "6",
      "7": "7",
      "8": "8",
      "9": "9",
      "auto": "auto",
    },
    "gridRow": Object {
      "auto": "auto",
      "span-1": "span 1 / span 1",
      "span-2": "span 2 / span 2",
      "span-3": "span 3 / span 3",
      "span-4": "span 4 / span 4",
      "span-5": "span 5 / span 5",
      "span-6": "span 6 / span 6",
    },
    "gridRowEnd": Object {
      "1": "1",
      "2": "2",
      "3": "3",
      "4": "4",
      "5": "5",
      "6": "6",
      "7": "7",
      "auto": "auto",
    },
    "gridRowStart": Object {
      "1": "1",
      "2": "2",
      "3": "3",
      "4": "4",
      "5": "5",
      "6": "6",
      "7": "7",
      "auto": "auto",
    },
    "gridTemplateColumns": Object {
      "1": "repeat(1, minmax(0, 1fr))",
      "10": "repeat(10, minmax(0, 1fr))",
      "11": "repeat(11, minmax(0, 1fr))",
      "12": "repeat(12, minmax(0, 1fr))",
      "2": "repeat(2, minmax(0, 1fr))",
      "3": "repeat(3, minmax(0, 1fr))",
      "4": "repeat(4, minmax(0, 1fr))",
      "5": "repeat(5, minmax(0, 1fr))",
      "6": "repeat(6, minmax(0, 1fr))",
      "7": "repeat(7, minmax(0, 1fr))",
      "8": "repeat(8, minmax(0, 1fr))",
      "9": "repeat(9, minmax(0, 1fr))",
      "none": "none",
    },
    "gridTemplateRows": Object {
      "1": "repeat(1, minmax(0, 1fr))",
      "2": "repeat(2, minmax(0, 1fr))",
      "3": "repeat(3, minmax(0, 1fr))",
      "4": "repeat(4, minmax(0, 1fr))",
      "5": "repeat(5, minmax(0, 1fr))",
      "6": "repeat(6, minmax(0, 1fr))",
      "none": "none",
    },
    "height": Object {
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "1/2": "50%",
      "1/3": "33.333333%",
      "1/4": "25%",
      "1/5": "20%",
      "1/6": "16.666667%",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "2/3": "66.666667%",
      "2/4": "50%",
      "2/5": "40%",
      "2/6": "33.333333%",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "3/4": "75%",
      "3/5": "60%",
      "3/6": "50%",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "4/5": "80%",
      "4/6": "66.666667%",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "5/6": "83.333333%",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "auto": "auto",
      "full": "100%",
      "px": "1px",
      "screen": "100vh",
    },
    "inset": Object {
      "0": "0",
      "auto": "auto",
    },
    "letterSpacing": Object {
      "normal": "0",
      "tight": "-0.025em",
      "tighter": "-0.05em",
      "wide": "0.025em",
      "wider": "0.05em",
      "widest": "0.1em",
    },
    "lineHeight": Object {
      "10": "2.5rem",
      "3": ".75rem",
      "4": "1rem",
      "5": "1.25rem",
      "6": "1.5rem",
      "7": "1.75rem",
      "8": "2rem",
      "9": "2.25rem",
      "loose": "2",
      "none": "1",
      "normal": "1.5",
      "relaxed": "1.625",
      "snug": "1.375",
      "tight": "1.25",
    },
    "listStyleType": Object {
      "decimal": "decimal",
      "disc": "disc",
      "none": "none",
    },
    "margin": Object {
      "-0.5": "-0.125rem",
      "-1": "-0.25rem",
      "-1.5": "-0.375rem",
      "-10": "-2.5rem",
      "-11": "-2.75rem",
      "-12": "-3rem",
      "-14": "-3.5rem",
      "-16": "-4rem",
      "-2": "-0.5rem",
      "-2.5": "-0.625rem",
      "-20": "-5rem",
      "-24": "-6rem",
      "-28": "-7rem",
      "-3": "-0.75rem",
      "-3.5": "-0.875rem",
      "-32": "-8rem",
      "-36": "-9rem",
      "-4": "-1rem",
      "-40": "-10rem",
      "-44": "-11rem",
      "-48": "-12rem",
      "-5": "-1.25rem",
      "-52": "-13rem",
      "-56": "-14rem",
      "-6": "-1.5rem",
      "-60": "-15rem",
      "-64": "-16rem",
      "-7": "-1.75rem",
      "-72": "-18rem",
      "-8": "-2rem",
      "-80": "-20rem",
      "-9": "-2.25rem",
      "-96": "-24rem",
      "-px": "-1px",
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "128": "32rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "auto": "auto",
      "px": "1px",
    },
    "maxHeight": Object {
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "full": "100%",
      "px": "1px",
      "screen": "100vh",
    },
    "maxWidth": Object {
      "0": "0",
      "2xl": "42rem",
      "3xl": "48rem",
      "4xl": "56rem",
      "5xl": "64rem",
      "6xl": "72rem",
      "7xl": "80rem",
      "full": "100%",
      "lg": "32rem",
      "max": "max-content",
      "md": "28rem",
      "min": "min-content",
      "none": "none",
      "prose": "65ch",
      "screen-lg": "1024px",
      "screen-md": "768px",
      "screen-sm": "640px",
      "screen-xl": "1280px",
      "sm": "24rem",
      "xl": "36rem",
      "xs": "20rem",
    },
    "minHeight": Object {
      "0": "0",
      "full": "100%",
      "screen": "100vh",
    },
    "minWidth": Object {
      "0": "0",
      "full": "100%",
      "max": "max-content",
      "min": "min-content",
    },
    "objectPosition": Object {
      "bottom": "bottom",
      "center": "center",
      "left": "left",
      "left-bottom": "left bottom",
      "left-top": "left top",
      "right": "right",
      "right-bottom": "right bottom",
      "right-top": "right top",
      "top": "top",
    },
    "opacity": Object {
      "0": "0",
      "100": "1",
      "25": "0.25",
      "50": "0.5",
      "75": "0.75",
    },
    "order": Object {
      "1": "1",
      "10": "10",
      "11": "11",
      "12": "12",
      "2": "2",
      "3": "3",
      "4": "4",
      "5": "5",
      "6": "6",
      "7": "7",
      "8": "8",
      "9": "9",
      "first": "-9999",
      "last": "9999",
      "none": "0",
    },
    "padding": Object {
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "px": "1px",
    },
    "placeholderColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "current": "currentColor",
      "cyan": "#9cdbff",
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "placeholderOpacity": Object {
      "0": "0",
      "100": "1",
      "25": "0.25",
      "50": "0.5",
      "75": "0.75",
    },
    "rotate": Object {
      "-180": "-180deg",
      "-45": "-45deg",
      "-90": "-90deg",
      "0": "0",
      "180": "180deg",
      "45": "45deg",
      "90": "90deg",
    },
    "scale": Object {
      "0": "0",
      "100": "1",
      "105": "1.05",
      "110": "1.1",
      "125": "1.25",
      "150": "1.5",
      "50": ".5",
      "75": ".75",
      "90": ".9",
      "95": ".95",
    },
    "screens": Object {
      "lg": "1024px",
      "md": "768px",
      "sm": "640px",
      "xl": "1280px",
    },
    "skew": Object {
      "-12": "-12deg",
      "-3": "-3deg",
      "-6": "-6deg",
      "0": "0",
      "12": "12deg",
      "3": "3deg",
      "6": "6deg",
    },
    "space": Object {
      "-0.5": "-0.125rem",
      "-1": "-0.25rem",
      "-1.5": "-0.375rem",
      "-10": "-2.5rem",
      "-11": "-2.75rem",
      "-12": "-3rem",
      "-14": "-3.5rem",
      "-16": "-4rem",
      "-2": "-0.5rem",
      "-2.5": "-0.625rem",
      "-20": "-5rem",
      "-24": "-6rem",
      "-28": "-7rem",
      "-3": "-0.75rem",
      "-3.5": "-0.875rem",
      "-32": "-8rem",
      "-36": "-9rem",
      "-4": "-1rem",
      "-40": "-10rem",
      "-44": "-11rem",
      "-48": "-12rem",
      "-5": "-1.25rem",
      "-52": "-13rem",
      "-56": "-14rem",
      "-6": "-1.5rem",
      "-60": "-15rem",
      "-64": "-16rem",
      "-7": "-1.75rem",
      "-72": "-18rem",
      "-8": "-2rem",
      "-80": "-20rem",
      "-9": "-2.25rem",
      "-96": "-24rem",
      "-px": "-1px",
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "px": "1px",
    },
    "spacing": Object {
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "px": "1px",
    },
    "stroke": Object {
      "current": "currentColor",
    },
    "strokeWidth": Object {
      "0": "0",
      "1": "1",
      "2": "2",
    },
    "textColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "current": "currentColor",
      "cyan": "#9cdbff",
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "textOpacity": Object {
      "0": "0",
      "100": "1",
      "25": "0.25",
      "50": "0.5",
      "75": "0.75",
    },
    "transformOrigin": Object {
      "bottom": "bottom",
      "bottom-left": "bottom left",
      "bottom-right": "bottom right",
      "center": "center",
      "left": "left",
      "right": "right",
      "top": "top",
      "top-left": "top left",
      "top-right": "top right",
    },
    "transitionDelay": Object {
      "100": "100ms",
      "1000": "1000ms",
      "150": "150ms",
      "200": "200ms",
      "300": "300ms",
      "500": "500ms",
      "700": "700ms",
      "75": "75ms",
    },
    "transitionDuration": Object {
      "100": "100ms",
      "1000": "1000ms",
      "150": "150ms",
      "200": "200ms",
      "300": "300ms",
      "500": "500ms",
      "700": "700ms",
      "75": "75ms",
    },
    "transitionProperty": Object {
      "all": "all",
      "colors": "background-color, border-color, color, fill, stroke",
      "default": "background-color, border-color, color, fill, stroke, opacity, box-shadow, transform",
      "none": "none",
      "opacity": "opacity",
      "shadow": "box-shadow",
      "transform": "transform",
    },
    "transitionTimingFunction": Object {
      "in": "cubic-bezier(0.4, 0, 1, 1)",
      "in-out": "cubic-bezier(0.4, 0, 0.2, 1)",
      "linear": "linear",
      "out": "cubic-bezier(0, 0, 0.2, 1)",
    },
    "translate": Object {
      "-0.5": "-0.125rem",
      "-1": "-0.25rem",
      "-1.5": "-0.375rem",
      "-1/2": "-50%",
      "-10": "-2.5rem",
      "-11": "-2.75rem",
      "-12": "-3rem",
      "-14": "-3.5rem",
      "-16": "-4rem",
      "-2": "-0.5rem",
      "-2.5": "-0.625rem",
      "-20": "-5rem",
      "-24": "-6rem",
      "-28": "-7rem",
      "-3": "-0.75rem",
      "-3.5": "-0.875rem",
      "-32": "-8rem",
      "-36": "-9rem",
      "-4": "-1rem",
      "-40": "-10rem",
      "-44": "-11rem",
      "-48": "-12rem",
      "-5": "-1.25rem",
      "-52": "-13rem",
      "-56": "-14rem",
      "-6": "-1.5rem",
      "-60": "-15rem",
      "-64": "-16rem",
      "-7": "-1.75rem",
      "-72": "-18rem",
      "-8": "-2rem",
      "-80": "-20rem",
      "-9": "-2.25rem",
      "-96": "-24rem",
      "-full": "-100%",
      "-px": "-1px",
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "1/2": "50%",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "full": "100%",
      "px": "1px",
    },
    "width": Object {
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "1/12": "8.333333%",
      "1/2": "50%",
      "1/3": "33.333333%",
      "1/4": "25%",
      "1/5": "20%",
      "1/6": "16.666667%",
      "10": "2.5rem",
      "10/12": "83.333333%",
      "11": "2.75rem",
      "11/12": "91.666667%",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "2/12": "16.666667%",
      "2/3": "66.666667%",
      "2/4": "50%",
      "2/5": "40%",
      "2/6": "33.333333%",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "3/12": "25%",
      "3/4": "75%",
      "3/5": "60%",
      "3/6": "50%",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "4/12": "33.333333%",
      "4/5": "80%",
      "4/6": "66.666667%",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "5/12": "41.666667%",
      "5/6": "83.333333%",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "6/12": "50%",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "7/12": "58.333333%",
      "72": "18rem",
      "8": "2rem",
      "8/12": "66.666667%",
      "80": "20rem",
      "9": "2.25rem",
      "9/12": "75%",
      "96": "24rem",
      "auto": "auto",
      "full": "100%",
      "max": "max-content",
      "min": "min-content",
      "px": "1px",
      "screen": "100vw",
    },
    "zIndex": Object {
      "0": "0",
      "10": "10",
      "20": "20",
      "30": "30",
      "40": "40",
      "50": "50",
      "auto": "auto",
    },
  },
  "variants": Object {
    "accessibility": Array [
      "responsive",
      "focus",
    ],
    "alignContent": Array [
      "responsive",
    ],
    "alignItems": Array [
      "responsive",
    ],
    "alignSelf": Array [
      "responsive",
    ],
    "appearance": Array [
      "responsive",
    ],
    "backgroundAttachment": Array [
      "responsive",
    ],
    "backgroundColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "backgroundOpacity": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "backgroundPosition": Array [
      "responsive",
    ],
    "backgroundRepeat": Array [
      "responsive",
    ],
    "backgroundSize": Array [
      "responsive",
    ],
    "borderCollapse": Array [
      "responsive",
    ],
    "borderColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "borderOpacity": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "borderRadius": Array [
      "responsive",
    ],
    "borderStyle": Array [
      "responsive",
    ],
    "borderWidth": Array [
      "responsive",
    ],
    "boxShadow": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "boxSizing": Array [
      "responsive",
    ],
    "clear": Array [
      "responsive",
    ],
    "cursor": Array [
      "responsive",
    ],
    "display": Array [
      "responsive",
    ],
    "divideColor": Array [
      "responsive",
    ],
    "divideOpacity": Array [
      "responsive",
    ],
    "divideWidth": Array [
      "responsive",
    ],
    "fill": Array [
      "responsive",
    ],
    "flex": Array [
      "responsive",
    ],
    "flexDirection": Array [
      "responsive",
    ],
    "flexGrow": Array [
      "responsive",
    ],
    "flexShrink": Array [
      "responsive",
    ],
    "flexWrap": Array [
      "responsive",
    ],
    "float": Array [
      "responsive",
    ],
    "fontFamily": Array [
      "responsive",
    ],
    "fontSize": Array [
      "responsive",
    ],
    "fontSmoothing": Array [
      "responsive",
    ],
    "fontStyle": Array [
      "responsive",
    ],
    "fontWeight": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "gap": Array [
      "responsive",
    ],
    "gridAutoFlow": Array [
      "responsive",
    ],
    "gridColumn": Array [
      "responsive",
    ],
    "gridColumnEnd": Array [
      "responsive",
    ],
    "gridColumnStart": Array [
      "responsive",
    ],
    "gridRow": Array [
      "responsive",
    ],
    "gridRowEnd": Array [
      "responsive",
    ],
    "gridRowStart": Array [
      "responsive",
    ],
    "gridTemplateColumns": Array [
      "responsive",
    ],
    "gridTemplateRows": Array [
      "responsive",
    ],
    "height": Array [
      "responsive",
    ],
    "inset": Array [
      "responsive",
    ],
    "justifyContent": Array [
      "responsive",
    ],
    "letterSpacing": Array [
      "responsive",
    ],
    "lineHeight": Array [
      "responsive",
    ],
    "listStylePosition": Array [
      "responsive",
    ],
    "listStyleType": Array [
      "responsive",
    ],
    "margin": Array [
      "responsive",
    ],
    "maxHeight": Array [
      "responsive",
    ],
    "maxWidth": Array [
      "responsive",
    ],
    "minHeight": Array [
      "responsive",
    ],
    "minWidth": Array [
      "responsive",
    ],
    "objectFit": Array [
      "responsive",
    ],
    "objectPosition": Array [
      "responsive",
    ],
    "opacity": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "order": Array [
      "responsive",
    ],
    "outline": Array [
      "responsive",
      "focus",
    ],
    "overflow": Array [
      "responsive",
    ],
    "padding": Array [
      "responsive",
    ],
    "placeholderColor": Array [
      "responsive",
      "focus",
    ],
    "placeholderOpacity": Array [
      "responsive",
      "focus",
    ],
    "pointerEvents": Array [
      "responsive",
    ],
    "position": Array [
      "responsive",
    ],
    "resize": Array [
      "responsive",
    ],
    "rotate": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "scale": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "skew": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "space": Array [
      "responsive",
    ],
    "stroke": Array [
      "responsive",
    ],
    "strokeWidth": Array [
      "responsive",
    ],
    "tableLayout": Array [
      "responsive",
    ],
    "textAlign": Array [
      "responsive",
    ],
    "textColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "textDecoration": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "textOpacity": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "textTransform": Array [
      "responsive",
    ],
    "transform": Array [
      "responsive",
    ],
    "transformOrigin": Array [
      "responsive",
    ],
    "transitionDelay": Array [
      "responsive",
    ],
    "transitionDuration": Array [
      "responsive",
    ],
    "transitionProperty": Array [
      "responsive",
    ],
    "transitionTimingFunction": Array [
      "responsive",
    ],
    "translate": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "userSelect": Array [
      "responsive",
    ],
    "verticalAlign": Array [
      "responsive",
    ],
    "visibility": Array [
      "responsive",
    ],
    "whitespace": Array [
      "responsive",
    ],
    "width": Array [
      "responsive",
    ],
    "wordBreak": Array [
      "responsive",
    ],
    "zIndex": Array [
      "responsive",
    ],
  },
}
`;

exports[`Config Resolve config - Default Config should match default config when custom config is empty 1`] = `
Object {
  "corePlugins": Object {},
  "important": false,
  "plugins": Array [],
  "prefix": "",
  "purge": Array [],
  "separator": ":",
  "target": "relaxed",
  "theme": Object {
    "backgroundColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "current": "currentColor",
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "backgroundOpacity": Object {
      "0": "0",
      "100": "1",
      "25": "0.25",
      "50": "0.5",
      "75": "0.75",
    },
    "backgroundPosition": Object {
      "bottom": "bottom",
      "center": "center",
      "left": "left",
      "left-bottom": "left bottom",
      "left-top": "left top",
      "right": "right",
      "right-bottom": "right bottom",
      "right-top": "right top",
      "top": "top",
    },
    "backgroundSize": Object {
      "auto": "auto",
      "contain": "contain",
      "cover": "cover",
    },
    "borderColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "current": "currentColor",
      "default": "#e2e8f0",
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "borderOpacity": Object {
      "0": "0",
      "100": "1",
      "25": "0.25",
      "50": "0.5",
      "75": "0.75",
    },
    "borderRadius": Object {
      "default": "0.25rem",
      "full": "9999px",
      "lg": "0.5rem",
      "md": "0.375rem",
      "none": "0",
      "sm": "0.125rem",
    },
    "borderWidth": Object {
      "0": "0",
      "2": "2px",
      "4": "4px",
      "8": "8px",
      "default": "1px",
    },
    "boxShadow": Object {
      "2xl": "0 25px 50px -12px rgba(0, 0, 0, 0.25)",
      "default": "0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06)",
      "inner": "inset 0 2px 4px 0 rgba(0, 0, 0, 0.06)",
      "lg": "0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)",
      "md": "0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06)",
      "none": "none",
      "outline": "0 0 0 3px rgba(66, 153, 225, 0.5)",
      "sm": "0 1px 2px 0 rgba(0, 0, 0, 0.05)",
      "xl": "0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04)",
      "xs": "0 0 0 1px rgba(0, 0, 0, 0.05)",
    },
    "colors": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "current": "currentColor",
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "container": Object {},
    "cursor": Object {
      "auto": "auto",
      "default": "default",
      "move": "move",
      "not-allowed": "not-allowed",
      "pointer": "pointer",
      "text": "text",
      "wait": "wait",
    },
    "divideColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "current": "currentColor",
      "default": "#e2e8f0",
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "divideOpacity": Object {
      "0": "0",
      "100": "1",
      "25": "0.25",
      "50": "0.5",
      "75": "0.75",
    },
    "divideWidth": Object {
      "0": "0",
      "2": "2px",
      "4": "4px",
      "8": "8px",
      "default": "1px",
    },
    "fill": Object {
      "current": "currentColor",
    },
    "flex": Object {
      "1": "1 1 0%",
      "auto": "1 1 auto",
      "initial": "0 1 auto",
      "none": "none",
    },
    "flexGrow": Object {
      "0": "0",
      "default": "1",
    },
    "flexShrink": Object {
      "0": "0",
      "default": "1",
    },
    "fontFamily": Object {
      "mono": Array [
        "Menlo",
        "Monaco",
        "Consolas",
        "\\"Liberation Mono\\"",
        "\\"Courier New\\"",
        "monospace",
      ],
      "sans": Array [
        "system-ui",
        "-apple-system",
        "BlinkMacSystemFont",
        "\\"Segoe UI\\"",
        "Roboto",
        "\\"Helvetica Neue\\"",
        "Arial",
        "\\"Noto Sans\\"",
        "sans-serif",
        "\\"Apple Color Emoji\\"",
        "\\"Segoe UI Emoji\\"",
        "\\"Segoe UI Symbol\\"",
        "\\"Noto Color Emoji\\"",
      ],
      "serif": Array [
        "Georgia",
        "Cambria",
        "\\"Times New Roman\\"",
        "Times",
        "serif",
      ],
    },
    "fontSize": Object {
      "2xl": "1.5rem",
      "3xl": "1.875rem",
      "4xl": "2.25rem",
      "5xl": "3rem",
      "6xl": "4rem",
      "base": "1rem",
      "lg": "1.125rem",
      "sm": "0.875rem",
      "xl": "1.25rem",
      "xs": "0.75rem",
    },
    "fontWeight": Object {
      "black": "900",
      "bold": "700",
      "extrabold": "800",
      "hairline": "100",
      "light": "300",
      "medium": "500",
      "normal": "400",
      "semibold": "600",
      "thin": "200",
    },
    "gap": Object {
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "px": "1px",
    },
    "gridColumn": Object {
      "auto": "auto",
      "span-1": "span 1 / span 1",
      "span-10": "span 10 / span 10",
      "span-11": "span 11 / span 11",
      "span-12": "span 12 / span 12",
      "span-2": "span 2 / span 2",
      "span-3": "span 3 / span 3",
      "span-4": "span 4 / span 4",
      "span-5": "span 5 / span 5",
      "span-6": "span 6 / span 6",
      "span-7": "span 7 / span 7",
      "span-8": "span 8 / span 8",
      "span-9": "span 9 / span 9",
    },
    "gridColumnEnd": Object {
      "1": "1",
      "10": "10",
      "11": "11",
      "12": "12",
      "13": "13",
      "2": "2",
      "3": "3",
      "4": "4",
      "5": "5",
      "6": "6",
      "7": "7",
      "8": "8",
      "9": "9",
      "auto": "auto",
    },
    "gridColumnStart": Object {
      "1": "1",
      "10": "10",
      "11": "11",
      "12": "12",
      "13": "13",
      "2": "2",
      "3": "3",
      "4": "4",
      "5": "5",
      "6": "6",
      "7": "7",
      "8": "8",
      "9": "9",
      "auto": "auto",
    },
    "gridRow": Object {
      "auto": "auto",
      "span-1": "span 1 / span 1",
      "span-2": "span 2 / span 2",
      "span-3": "span 3 / span 3",
      "span-4": "span 4 / span 4",
      "span-5": "span 5 / span 5",
      "span-6": "span 6 / span 6",
    },
    "gridRowEnd": Object {
      "1": "1",
      "2": "2",
      "3": "3",
      "4": "4",
      "5": "5",
      "6": "6",
      "7": "7",
      "auto": "auto",
    },
    "gridRowStart": Object {
      "1": "1",
      "2": "2",
      "3": "3",
      "4": "4",
      "5": "5",
      "6": "6",
      "7": "7",
      "auto": "auto",
    },
    "gridTemplateColumns": Object {
      "1": "repeat(1, minmax(0, 1fr))",
      "10": "repeat(10, minmax(0, 1fr))",
      "11": "repeat(11, minmax(0, 1fr))",
      "12": "repeat(12, minmax(0, 1fr))",
      "2": "repeat(2, minmax(0, 1fr))",
      "3": "repeat(3, minmax(0, 1fr))",
      "4": "repeat(4, minmax(0, 1fr))",
      "5": "repeat(5, minmax(0, 1fr))",
      "6": "repeat(6, minmax(0, 1fr))",
      "7": "repeat(7, minmax(0, 1fr))",
      "8": "repeat(8, minmax(0, 1fr))",
      "9": "repeat(9, minmax(0, 1fr))",
      "none": "none",
    },
    "gridTemplateRows": Object {
      "1": "repeat(1, minmax(0, 1fr))",
      "2": "repeat(2, minmax(0, 1fr))",
      "3": "repeat(3, minmax(0, 1fr))",
      "4": "repeat(4, minmax(0, 1fr))",
      "5": "repeat(5, minmax(0, 1fr))",
      "6": "repeat(6, minmax(0, 1fr))",
      "none": "none",
    },
    "height": Object {
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "1/2": "50%",
      "1/3": "33.333333%",
      "1/4": "25%",
      "1/5": "20%",
      "1/6": "16.666667%",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "2/3": "66.666667%",
      "2/4": "50%",
      "2/5": "40%",
      "2/6": "33.333333%",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "3/4": "75%",
      "3/5": "60%",
      "3/6": "50%",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "4/5": "80%",
      "4/6": "66.666667%",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "5/6": "83.333333%",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "auto": "auto",
      "full": "100%",
      "px": "1px",
      "screen": "100vh",
    },
    "inset": Object {
      "0": "0",
      "auto": "auto",
    },
    "letterSpacing": Object {
      "normal": "0",
      "tight": "-0.025em",
      "tighter": "-0.05em",
      "wide": "0.025em",
      "wider": "0.05em",
      "widest": "0.1em",
    },
    "lineHeight": Object {
      "10": "2.5rem",
      "3": ".75rem",
      "4": "1rem",
      "5": "1.25rem",
      "6": "1.5rem",
      "7": "1.75rem",
      "8": "2rem",
      "9": "2.25rem",
      "loose": "2",
      "none": "1",
      "normal": "1.5",
      "relaxed": "1.625",
      "snug": "1.375",
      "tight": "1.25",
    },
    "listStyleType": Object {
      "decimal": "decimal",
      "disc": "disc",
      "none": "none",
    },
    "margin": Object {
      "-0.5": "-0.125rem",
      "-1": "-0.25rem",
      "-1.5": "-0.375rem",
      "-10": "-2.5rem",
      "-11": "-2.75rem",
      "-12": "-3rem",
      "-14": "-3.5rem",
      "-16": "-4rem",
      "-2": "-0.5rem",
      "-2.5": "-0.625rem",
      "-20": "-5rem",
      "-24": "-6rem",
      "-28": "-7rem",
      "-3": "-0.75rem",
      "-3.5": "-0.875rem",
      "-32": "-8rem",
      "-36": "-9rem",
      "-4": "-1rem",
      "-40": "-10rem",
      "-44": "-11rem",
      "-48": "-12rem",
      "-5": "-1.25rem",
      "-52": "-13rem",
      "-56": "-14rem",
      "-6": "-1.5rem",
      "-60": "-15rem",
      "-64": "-16rem",
      "-7": "-1.75rem",
      "-72": "-18rem",
      "-8": "-2rem",
      "-80": "-20rem",
      "-9": "-2.25rem",
      "-96": "-24rem",
      "-px": "-1px",
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "auto": "auto",
      "px": "1px",
    },
    "maxHeight": Object {
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "full": "100%",
      "px": "1px",
      "screen": "100vh",
    },
    "maxWidth": Object {
      "0": "0",
      "2xl": "42rem",
      "3xl": "48rem",
      "4xl": "56rem",
      "5xl": "64rem",
      "6xl": "72rem",
      "7xl": "80rem",
      "full": "100%",
      "lg": "32rem",
      "max": "max-content",
      "md": "28rem",
      "min": "min-content",
      "none": "none",
      "prose": "65ch",
      "screen-lg": "1024px",
      "screen-md": "768px",
      "screen-sm": "640px",
      "screen-xl": "1280px",
      "sm": "24rem",
      "xl": "36rem",
      "xs": "20rem",
    },
    "minHeight": Object {
      "0": "0",
      "full": "100%",
      "screen": "100vh",
    },
    "minWidth": Object {
      "0": "0",
      "full": "100%",
      "max": "max-content",
      "min": "min-content",
    },
    "objectPosition": Object {
      "bottom": "bottom",
      "center": "center",
      "left": "left",
      "left-bottom": "left bottom",
      "left-top": "left top",
      "right": "right",
      "right-bottom": "right bottom",
      "right-top": "right top",
      "top": "top",
    },
    "opacity": Object {
      "0": "0",
      "100": "1",
      "25": "0.25",
      "50": "0.5",
      "75": "0.75",
    },
    "order": Object {
      "1": "1",
      "10": "10",
      "11": "11",
      "12": "12",
      "2": "2",
      "3": "3",
      "4": "4",
      "5": "5",
      "6": "6",
      "7": "7",
      "8": "8",
      "9": "9",
      "first": "-9999",
      "last": "9999",
      "none": "0",
    },
    "padding": Object {
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "px": "1px",
    },
    "placeholderColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "current": "currentColor",
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "placeholderOpacity": Object {
      "0": "0",
      "100": "1",
      "25": "0.25",
      "50": "0.5",
      "75": "0.75",
    },
    "rotate": Object {
      "-180": "-180deg",
      "-45": "-45deg",
      "-90": "-90deg",
      "0": "0",
      "180": "180deg",
      "45": "45deg",
      "90": "90deg",
    },
    "scale": Object {
      "0": "0",
      "100": "1",
      "105": "1.05",
      "110": "1.1",
      "125": "1.25",
      "150": "1.5",
      "50": ".5",
      "75": ".75",
      "90": ".9",
      "95": ".95",
    },
    "screens": Object {
      "lg": "1024px",
      "md": "768px",
      "sm": "640px",
      "xl": "1280px",
    },
    "skew": Object {
      "-12": "-12deg",
      "-3": "-3deg",
      "-6": "-6deg",
      "0": "0",
      "12": "12deg",
      "3": "3deg",
      "6": "6deg",
    },
    "space": Object {
      "-0.5": "-0.125rem",
      "-1": "-0.25rem",
      "-1.5": "-0.375rem",
      "-10": "-2.5rem",
      "-11": "-2.75rem",
      "-12": "-3rem",
      "-14": "-3.5rem",
      "-16": "-4rem",
      "-2": "-0.5rem",
      "-2.5": "-0.625rem",
      "-20": "-5rem",
      "-24": "-6rem",
      "-28": "-7rem",
      "-3": "-0.75rem",
      "-3.5": "-0.875rem",
      "-32": "-8rem",
      "-36": "-9rem",
      "-4": "-1rem",
      "-40": "-10rem",
      "-44": "-11rem",
      "-48": "-12rem",
      "-5": "-1.25rem",
      "-52": "-13rem",
      "-56": "-14rem",
      "-6": "-1.5rem",
      "-60": "-15rem",
      "-64": "-16rem",
      "-7": "-1.75rem",
      "-72": "-18rem",
      "-8": "-2rem",
      "-80": "-20rem",
      "-9": "-2.25rem",
      "-96": "-24rem",
      "-px": "-1px",
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "px": "1px",
    },
    "spacing": Object {
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "px": "1px",
    },
    "stroke": Object {
      "current": "currentColor",
    },
    "strokeWidth": Object {
      "0": "0",
      "1": "1",
      "2": "2",
    },
    "textColor": Object {
      "black": "#000",
      "blue": Object {
        "100": "#ebf8ff",
        "200": "#bee3f8",
        "300": "#90cdf4",
        "400": "#63b3ed",
        "500": "#4299e1",
        "600": "#3182ce",
        "700": "#2b6cb0",
        "800": "#2c5282",
        "900": "#2a4365",
      },
      "current": "currentColor",
      "gray": Object {
        "100": "#f7fafc",
        "200": "#edf2f7",
        "300": "#e2e8f0",
        "400": "#cbd5e0",
        "500": "#a0aec0",
        "600": "#718096",
        "700": "#4a5568",
        "800": "#2d3748",
        "900": "#1a202c",
      },
      "green": Object {
        "100": "#f0fff4",
        "200": "#c6f6d5",
        "300": "#9ae6b4",
        "400": "#68d391",
        "500": "#48bb78",
        "600": "#38a169",
        "700": "#2f855a",
        "800": "#276749",
        "900": "#22543d",
      },
      "indigo": Object {
        "100": "#ebf4ff",
        "200": "#c3dafe",
        "300": "#a3bffa",
        "400": "#7f9cf5",
        "500": "#667eea",
        "600": "#5a67d8",
        "700": "#4c51bf",
        "800": "#434190",
        "900": "#3c366b",
      },
      "orange": Object {
        "100": "#fffaf0",
        "200": "#feebc8",
        "300": "#fbd38d",
        "400": "#f6ad55",
        "500": "#ed8936",
        "600": "#dd6b20",
        "700": "#c05621",
        "800": "#9c4221",
        "900": "#7b341e",
      },
      "pink": Object {
        "100": "#fff5f7",
        "200": "#fed7e2",
        "300": "#fbb6ce",
        "400": "#f687b3",
        "500": "#ed64a6",
        "600": "#d53f8c",
        "700": "#b83280",
        "800": "#97266d",
        "900": "#702459",
      },
      "purple": Object {
        "100": "#faf5ff",
        "200": "#e9d8fd",
        "300": "#d6bcfa",
        "400": "#b794f4",
        "500": "#9f7aea",
        "600": "#805ad5",
        "700": "#6b46c1",
        "800": "#553c9a",
        "900": "#44337a",
      },
      "red": Object {
        "100": "#fff5f5",
        "200": "#fed7d7",
        "300": "#feb2b2",
        "400": "#fc8181",
        "500": "#f56565",
        "600": "#e53e3e",
        "700": "#c53030",
        "800": "#9b2c2c",
        "900": "#742a2a",
      },
      "teal": Object {
        "100": "#e6fffa",
        "200": "#b2f5ea",
        "300": "#81e6d9",
        "400": "#4fd1c5",
        "500": "#38b2ac",
        "600": "#319795",
        "700": "#2c7a7b",
        "800": "#285e61",
        "900": "#234e52",
      },
      "transparent": "transparent",
      "white": "#fff",
      "yellow": Object {
        "100": "#fffff0",
        "200": "#fefcbf",
        "300": "#faf089",
        "400": "#f6e05e",
        "500": "#ecc94b",
        "600": "#d69e2e",
        "700": "#b7791f",
        "800": "#975a16",
        "900": "#744210",
      },
    },
    "textOpacity": Object {
      "0": "0",
      "100": "1",
      "25": "0.25",
      "50": "0.5",
      "75": "0.75",
    },
    "transformOrigin": Object {
      "bottom": "bottom",
      "bottom-left": "bottom left",
      "bottom-right": "bottom right",
      "center": "center",
      "left": "left",
      "right": "right",
      "top": "top",
      "top-left": "top left",
      "top-right": "top right",
    },
    "transitionDelay": Object {
      "100": "100ms",
      "1000": "1000ms",
      "150": "150ms",
      "200": "200ms",
      "300": "300ms",
      "500": "500ms",
      "700": "700ms",
      "75": "75ms",
    },
    "transitionDuration": Object {
      "100": "100ms",
      "1000": "1000ms",
      "150": "150ms",
      "200": "200ms",
      "300": "300ms",
      "500": "500ms",
      "700": "700ms",
      "75": "75ms",
    },
    "transitionProperty": Object {
      "all": "all",
      "colors": "background-color, border-color, color, fill, stroke",
      "default": "background-color, border-color, color, fill, stroke, opacity, box-shadow, transform",
      "none": "none",
      "opacity": "opacity",
      "shadow": "box-shadow",
      "transform": "transform",
    },
    "transitionTimingFunction": Object {
      "in": "cubic-bezier(0.4, 0, 1, 1)",
      "in-out": "cubic-bezier(0.4, 0, 0.2, 1)",
      "linear": "linear",
      "out": "cubic-bezier(0, 0, 0.2, 1)",
    },
    "translate": Object {
      "-0.5": "-0.125rem",
      "-1": "-0.25rem",
      "-1.5": "-0.375rem",
      "-1/2": "-50%",
      "-10": "-2.5rem",
      "-11": "-2.75rem",
      "-12": "-3rem",
      "-14": "-3.5rem",
      "-16": "-4rem",
      "-2": "-0.5rem",
      "-2.5": "-0.625rem",
      "-20": "-5rem",
      "-24": "-6rem",
      "-28": "-7rem",
      "-3": "-0.75rem",
      "-3.5": "-0.875rem",
      "-32": "-8rem",
      "-36": "-9rem",
      "-4": "-1rem",
      "-40": "-10rem",
      "-44": "-11rem",
      "-48": "-12rem",
      "-5": "-1.25rem",
      "-52": "-13rem",
      "-56": "-14rem",
      "-6": "-1.5rem",
      "-60": "-15rem",
      "-64": "-16rem",
      "-7": "-1.75rem",
      "-72": "-18rem",
      "-8": "-2rem",
      "-80": "-20rem",
      "-9": "-2.25rem",
      "-96": "-24rem",
      "-full": "-100%",
      "-px": "-1px",
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "1/2": "50%",
      "10": "2.5rem",
      "11": "2.75rem",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "72": "18rem",
      "8": "2rem",
      "80": "20rem",
      "9": "2.25rem",
      "96": "24rem",
      "full": "100%",
      "px": "1px",
    },
    "width": Object {
      "0": "0",
      "0.5": "0.125rem",
      "1": "0.25rem",
      "1.5": "0.375rem",
      "1/12": "8.333333%",
      "1/2": "50%",
      "1/3": "33.333333%",
      "1/4": "25%",
      "1/5": "20%",
      "1/6": "16.666667%",
      "10": "2.5rem",
      "10/12": "83.333333%",
      "11": "2.75rem",
      "11/12": "91.666667%",
      "12": "3rem",
      "14": "3.5rem",
      "16": "4rem",
      "2": "0.5rem",
      "2.5": "0.625rem",
      "2/12": "16.666667%",
      "2/3": "66.666667%",
      "2/4": "50%",
      "2/5": "40%",
      "2/6": "33.333333%",
      "20": "5rem",
      "24": "6rem",
      "28": "7rem",
      "3": "0.75rem",
      "3.5": "0.875rem",
      "3/12": "25%",
      "3/4": "75%",
      "3/5": "60%",
      "3/6": "50%",
      "32": "8rem",
      "36": "9rem",
      "4": "1rem",
      "4/12": "33.333333%",
      "4/5": "80%",
      "4/6": "66.666667%",
      "40": "10rem",
      "44": "11rem",
      "48": "12rem",
      "5": "1.25rem",
      "5/12": "41.666667%",
      "5/6": "83.333333%",
      "52": "13rem",
      "56": "14rem",
      "6": "1.5rem",
      "6/12": "50%",
      "60": "15rem",
      "64": "16rem",
      "7": "1.75rem",
      "7/12": "58.333333%",
      "72": "18rem",
      "8": "2rem",
      "8/12": "66.666667%",
      "80": "20rem",
      "9": "2.25rem",
      "9/12": "75%",
      "96": "24rem",
      "auto": "auto",
      "full": "100%",
      "max": "max-content",
      "min": "min-content",
      "px": "1px",
      "screen": "100vw",
    },
    "zIndex": Object {
      "0": "0",
      "10": "10",
      "20": "20",
      "30": "30",
      "40": "40",
      "50": "50",
      "auto": "auto",
    },
  },
  "variants": Object {
    "accessibility": Array [
      "responsive",
      "focus",
    ],
    "alignContent": Array [
      "responsive",
    ],
    "alignItems": Array [
      "responsive",
    ],
    "alignSelf": Array [
      "responsive",
    ],
    "appearance": Array [
      "responsive",
    ],
    "backgroundAttachment": Array [
      "responsive",
    ],
    "backgroundColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "backgroundOpacity": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "backgroundPosition": Array [
      "responsive",
    ],
    "backgroundRepeat": Array [
      "responsive",
    ],
    "backgroundSize": Array [
      "responsive",
    ],
    "borderCollapse": Array [
      "responsive",
    ],
    "borderColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "borderOpacity": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "borderRadius": Array [
      "responsive",
    ],
    "borderStyle": Array [
      "responsive",
    ],
    "borderWidth": Array [
      "responsive",
    ],
    "boxShadow": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "boxSizing": Array [
      "responsive",
    ],
    "clear": Array [
      "responsive",
    ],
    "cursor": Array [
      "responsive",
    ],
    "display": Array [
      "responsive",
    ],
    "divideColor": Array [
      "responsive",
    ],
    "divideOpacity": Array [
      "responsive",
    ],
    "divideWidth": Array [
      "responsive",
    ],
    "fill": Array [
      "responsive",
    ],
    "flex": Array [
      "responsive",
    ],
    "flexDirection": Array [
      "responsive",
    ],
    "flexGrow": Array [
      "responsive",
    ],
    "flexShrink": Array [
      "responsive",
    ],
    "flexWrap": Array [
      "responsive",
    ],
    "float": Array [
      "responsive",
    ],
    "fontFamily": Array [
      "responsive",
    ],
    "fontSize": Array [
      "responsive",
    ],
    "fontSmoothing": Array [
      "responsive",
    ],
    "fontStyle": Array [
      "responsive",
    ],
    "fontWeight": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "gap": Array [
      "responsive",
    ],
    "gridAutoFlow": Array [
      "responsive",
    ],
    "gridColumn": Array [
      "responsive",
    ],
    "gridColumnEnd": Array [
      "responsive",
    ],
    "gridColumnStart": Array [
      "responsive",
    ],
    "gridRow": Array [
      "responsive",
    ],
    "gridRowEnd": Array [
      "responsive",
    ],
    "gridRowStart": Array [
      "responsive",
    ],
    "gridTemplateColumns": Array [
      "responsive",
    ],
    "gridTemplateRows": Array [
      "responsive",
    ],
    "height": Array [
      "responsive",
    ],
    "inset": Array [
      "responsive",
    ],
    "justifyContent": Array [
      "responsive",
    ],
    "letterSpacing": Array [
      "responsive",
    ],
    "lineHeight": Array [
      "responsive",
    ],
    "listStylePosition": Array [
      "responsive",
    ],
    "listStyleType": Array [
      "responsive",
    ],
    "margin": Array [
      "responsive",
    ],
    "maxHeight": Array [
      "responsive",
    ],
    "maxWidth": Array [
      "responsive",
    ],
    "minHeight": Array [
      "responsive",
    ],
    "minWidth": Array [
      "responsive",
    ],
    "objectFit": Array [
      "responsive",
    ],
    "objectPosition": Array [
      "responsive",
    ],
    "opacity": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "order": Array [
      "responsive",
    ],
    "outline": Array [
      "responsive",
      "focus",
    ],
    "overflow": Array [
      "responsive",
    ],
    "padding": Array [
      "responsive",
    ],
    "placeholderColor": Array [
      "responsive",
      "focus",
    ],
    "placeholderOpacity": Array [
      "responsive",
      "focus",
    ],
    "pointerEvents": Array [
      "responsive",
    ],
    "position": Array [
      "responsive",
    ],
    "resize": Array [
      "responsive",
    ],
    "rotate": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "scale": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "skew": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "space": Array [
      "responsive",
    ],
    "stroke": Array [
      "responsive",
    ],
    "strokeWidth": Array [
      "responsive",
    ],
    "tableLayout": Array [
      "responsive",
    ],
    "textAlign": Array [
      "responsive",
    ],
    "textColor": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "textDecoration": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "textOpacity": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "textTransform": Array [
      "responsive",
    ],
    "transform": Array [
      "responsive",
    ],
    "transformOrigin": Array [
      "responsive",
    ],
    "transitionDelay": Array [
      "responsive",
    ],
    "transitionDuration": Array [
      "responsive",
    ],
    "transitionProperty": Array [
      "responsive",
    ],
    "transitionTimingFunction": Array [
      "responsive",
    ],
    "translate": Array [
      "responsive",
      "hover",
      "focus",
    ],
    "userSelect": Array [
      "responsive",
    ],
    "verticalAlign": Array [
      "responsive",
    ],
    "visibility": Array [
      "responsive",
    ],
    "whitespace": Array [
      "responsive",
    ],
    "width": Array [
      "responsive",
    ],
    "wordBreak": Array [
      "responsive",
    ],
    "zIndex": Array [
      "responsive",
    ],
  },
}
`;
